fixing compilation warnings && remove Range sout on start